--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/knex": "^0.14.9",
     "@types/mocha": "^5.0.0",
     "@types/node": "^9.6.0",
+    "@types/stripe": "^5.0.9",
     "aws-sdk": "^2.213.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.1",
@@ -46,6 +47,7 @@
     "promise-mysql": "^3.2.1",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.2",
+    "stripe": "^5.8.0",
     "ts-loader": "^4.1.0",
     "ts-node": "^5.0.1",
     "tslint": "^5.5.0",
