--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-preset-es2015": "^6.24.1",
     "cassava": "^1.7.0",
     "chai": "^4.1.0",
+    "chai-exclude": "^1.0.8",
     "dynameh": "^2.10.3",
     "file-loader": "^1.1.11",
     "giftbit-cassava-routes": "git+ssh://git@github.com/Giftbit/giftbit-cassava-routes.git#semver:^5.5.2",
