--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "bankers-rounding": "^0.1.3",
     "cassava": "^1.7.0",
     "chai": "^4.1.0",
     "chai-exclude": "^1.0.8",
