--- a/infrastructure/ci.yaml
+++ b/infrastructure/ci.yaml
@@ -229,6 +229,8 @@ Resources:
             Resource:
               - !Sub "arn:aws:s3:::codepipeline-${AWS::Region}-*/*"
               - !Sub "arn:aws:s3:::${DeploymentArtifactBucket}/*"
+              # TODO delete below permission once everything is settled
+              - !Sub "arn:aws:s3:::lightrail-sandbox-deploymentartifacts/*"
           - Effect: Allow
             Action:
               - iam:AttachRolePolicy
@@ -268,6 +270,31 @@ Resources:
               - lambda:TagResource
               - lambda:UntagResource
             Resource: "*"
+          # RDS
+          - Effect: Allow
+            Action:
+              - rds:AddTagsToResource
+              - rds:CreateDBCluster
+              - rds:CreateDBInstance
+              - rds:CreateDBInstanceReadReplica
+              - rds:CreateDBSnapshot
+              - rds:CreateDBSubnetGroup
+              - rds:DeleteDBSubnetGroup
+              - rds:Describe*
+              - rds:ListTagsForResource
+              - rds:ModifyDBCluster
+              - rds:ModifyDBInstance
+              - rds:ModifyDBSubnetGroup
+              - rds:PromoteReadReplica
+              - rds:PromoteReadReplicaDBCluster
+              - rds:RemoveTagsFromResource
+              - rds:StartDBInstance
+              - rds:StopDBInstance
+            Resource:
+              - !Sub "arn:aws:rds:${AWS::Region}:${AWS::AccountId}:cluster:${ProjectName}-*"
+              - !Sub "arn:aws:rds:${AWS::Region}:${AWS::AccountId}:db:${ProjectName}-*"
+              - !Sub "arn:aws:rds:${AWS::Region}:${AWS::AccountId}:subgrp:${ProjectName}-*"
+            Resource:
           # API Gateway (REST events)
 #          - Effect: Allow
 #            Action:
