--- a/infrastructure/ci.yaml
+++ b/infrastructure/ci.yaml
@@ -294,6 +294,31 @@ Resources:
               - !Sub "arn:aws:rds:${AWS::Region}:${AWS::AccountId}:cluster:${ProjectName}-*"
               - !Sub "arn:aws:rds:${AWS::Region}:${AWS::AccountId}:db:${ProjectName}-*"
               - !Sub "arn:aws:rds:${AWS::Region}:${AWS::AccountId}:subgrp:${ProjectName}-*"
+          # Routing
+          - Effect: Allow
+            Action:
+              - ec2:AssociateRouteTable
+              - ec2:AttachInternetGateway
+              - ec2:AuthorizeSecurityGroupIngress
+              - ec2:CreateInternetGateway
+              - ec2:CreateRoute
+              - ec2:CreateRouteTable
+              - ec2:CreateSecurityGroup
+              - ec2:CreateSubnet
+              - ec2:CreateTags
+              - ec2:CreateVpc
+              - ec2:DeleteInternetGateway
+              - ec2:DeleteRouteTable
+              - ec2:DeleteSecurityGroup
+              - ec2:DeleteSubnet
+              - ec2:DeleteTags
+              - ec2:DeleteVpc
+              - ec2:Describe*
+              - ec2:DetachInternetGateway
+              - ec2:DisassociateRouteTable
+              - ec2:ModifyVpcAttribute
+            Resource:
+              "*"
           # API Gateway (REST events)
 #          - Effect: Allow
 #            Action:
