--- a/infrastructure/ci.yaml
+++ b/infrastructure/ci.yaml
@@ -291,9 +291,9 @@ Resources:
               - rds:StartDBInstance
               - rds:StopDBInstance
             Resource:
-              - !Sub "arn:aws:rds:${AWS::Region}:${AWS::AccountId}:cluster:${ProjectName}-*"
-              - !Sub "arn:aws:rds:${AWS::Region}:${AWS::AccountId}:db:${ProjectName}-*"
-              - !Sub "arn:aws:rds:${AWS::Region}:${AWS::AccountId}:subgrp:${ProjectName}-*"
+              - !Sub "arn:aws:rds:${AWS::Region}:${AWS::AccountId}:cluster:*"
+              - !Sub "arn:aws:rds:${AWS::Region}:${AWS::AccountId}:db:*"
+              - !Sub "arn:aws:rds:${AWS::Region}:${AWS::AccountId}:subgrp:*"
           # Routing
           - Effect: Allow
             Action:
