--- a/infrastructure/ci.yaml
+++ b/infrastructure/ci.yaml
@@ -324,6 +324,8 @@ Resources:
             Action:
               - kms:CreateKey
               - kms:DescribeKey
+              - kms:TagResource
+              - kms:UntagResource
             Resource: !Sub "arn:aws:rds:${AWS::Region}:${AWS::AccountId}:key/*"
           # API Gateway (REST events)
 #          - Effect: Allow
