--- a/infrastructure/ci.yaml
+++ b/infrastructure/ci.yaml
@@ -300,6 +300,7 @@ Resources:
               - ec2:AssociateRouteTable
               - ec2:AttachInternetGateway
               - ec2:AuthorizeSecurityGroupIngress
+              - ec2:AuthorizeSecurityGroupEgress
               - ec2:CreateInternetGateway
               - ec2:CreateRoute
               - ec2:CreateRouteTable
@@ -317,6 +318,8 @@ Resources:
               - ec2:DetachInternetGateway
               - ec2:DisassociateRouteTable
               - ec2:ModifyVpcAttribute
+              - ec2:RevokeSecurityGroupEgress
+              - ec2:RevokeSecurityGroupIngress
             Resource:
               "*"
           # KMS
