--- a/infrastructure/ci.yaml
+++ b/infrastructure/ci.yaml
@@ -310,6 +310,7 @@ Resources:
               - ec2:CreateTags
               - ec2:CreateVpc
               - ec2:DeleteInternetGateway
+              - ec2:DeleteRoute
               - ec2:DeleteRouteTable
               - ec2:DeleteSecurityGroup
               - ec2:DeleteSubnet
@@ -320,6 +321,7 @@ Resources:
               - ec2:DisassociateAddress
               - ec2:DisassociateRouteTable
               - ec2:ModifyVpcAttribute
+              - ec2:ReleaseAddress
               - ec2:RevokeSecurityGroupEgress
               - ec2:RevokeSecurityGroupIngress
             Resource:
