--- a/infrastructure/ci.yaml
+++ b/infrastructure/ci.yaml
@@ -307,6 +307,7 @@ Resources:
               - ec2:AuthorizeSecurityGroupIngress
               - ec2:AuthorizeSecurityGroupEgress
               - ec2:CreateInternetGateway
+              - ec2:CreateNatGateway
               - ec2:CreateRoute
               - ec2:CreateRouteTable
               - ec2:CreateSecurityGroup
@@ -314,6 +315,7 @@ Resources:
               - ec2:CreateTags
               - ec2:CreateVpc
               - ec2:DeleteInternetGateway
+              - ec2:DeleteNatGateway
               - ec2:DeleteRoute
               - ec2:DeleteRouteTable
               - ec2:DeleteSecurityGroup
