--- a/infrastructure/ci.yaml
+++ b/infrastructure/ci.yaml
@@ -229,8 +229,6 @@ Resources:
             Resource:
               - !Sub "arn:aws:s3:::codepipeline-${AWS::Region}-*/*"
               - !Sub "arn:aws:s3:::${DeploymentArtifactBucket}/*"
-              # TODO delete below permission once everything is settled
-              - !Sub "arn:aws:s3:::lightrail-sandbox-deploymentartifacts/*"
           - Effect: Allow
             Action:
               - iam:AttachRolePolicy
@@ -276,6 +274,7 @@ Resources:
               - rds:AddTagsToResource
               - rds:CreateDBCluster
               - rds:CreateDBClusterParameterGroup
+              - rds:CreateDBClusterSnapshot
               - rds:CreateDBInstance
               - rds:CreateDBInstanceReadReplica
               - rds:CreateDBSnapshot
@@ -332,13 +331,12 @@ Resources:
               - ec2:ReleaseAddress
               - ec2:RevokeSecurityGroupEgress
               - ec2:RevokeSecurityGroupIngress
-            Resource:
-              "*"
+            Resource: "*"
           # API Gateway (REST events)
-#          - Effect: Allow
-#            Action:
-#              - apigateway:*
-#            Resource: !Sub "arn:aws:apigateway:${AWS::Region}::/*"
+          - Effect: Allow
+            Action:
+              - apigateway:*
+            Resource: !Sub "arn:aws:apigateway:${AWS::Region}::/*"
           # CloudWatch event triggers
 #          - Effect: Allow
 #            Action:
