--- a/infrastructure/sam.yaml
+++ b/infrastructure/sam.yaml
@@ -278,7 +278,7 @@ Resources:
       PreferredMaintenanceWindow: sun:06:57-sun:07:57
       Port: 3306
       StorageEncrypted: true
-      KmsKeyId: !Sub "arn:aws:kms:${AWS::Region}:${AWS::AccountId}:key/${DbEncryptionKeyId}"
+      KmsKeyId: !Ref DbEncryptionKeyId
       DBSubnetGroupName: !Ref DbSubnetGroup
       VpcSecurityGroupIds:
         - !Ref DbSecurityGroup
