--- a/infrastructure/ci.yaml
+++ b/infrastructure/ci.yaml
@@ -303,6 +303,10 @@ Resources:
               - !Sub "arn:aws:rds:${AWS::Region}:${AWS::AccountId}:db:*"
               - !Sub "arn:aws:rds:${AWS::Region}:${AWS::AccountId}:pg:*"
               - !Sub "arn:aws:rds:${AWS::Region}:${AWS::AccountId}:subgrp:*"
+          - Effect: Allow
+            Action:
+              - rds:DescribeDefaultEngineParameters
+            Resource: "*"
           # Routing
           - Effect: Allow
             Action:
