--- a/infrastructure/ci.yaml
+++ b/infrastructure/ci.yaml
@@ -305,7 +305,8 @@ Resources:
               - !Sub "arn:aws:rds:${AWS::Region}:${AWS::AccountId}:subgrp:*"
           - Effect: Allow
             Action:
-              - rds:DescribeDefaultEngineParameters
+              - rds:DescribeDBInstances
+              - rds:DescribeEngineDefaultParameters
             Resource: "*"
           # Routing
           - Effect: Allow
