--- a/infrastructure/ci.yaml
+++ b/infrastructure/ci.yaml
@@ -307,6 +307,7 @@ Resources:
             Action:
               - rds:DescribeDBInstances
               - rds:DescribeEngineDefaultParameters
+              - rds:DescribeEvents
             Resource: "*"
           # Routing
           - Effect: Allow
