--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.1",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
     "bankers-rounding": "^0.1.3",
     "cassava": "^2.1.0",
     "chai": "^4.1.0",
