--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/aws-lambda": "8.10.6",
     "@types/chai": "^4.1.4",
     "@types/knex": "^0.14.14",
+    "@types/loglevel": "^1.5.3",
     "@types/mocha": "^5.2.0",
     "@types/node": "^10.3.4",
     "@types/papaparse": "^4.1.34",
@@ -47,6 +48,8 @@
     "giftbit-ruleslib": "git+ssh://git@github.com/Giftbit/giftbit-ruleslib.git#semver:^4.0.2",
     "json-loader": "^0.5.7",
     "knex": "^0.14.6",
+    "loglevel": "^1.6.1",
+    "loglevel-plugin-prefix": "^0.8.4",
     "lru-cache": "^4.1.3",
     "mocha": "^5.2.0",
     "mysql2": "^1.5.3",
