--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "mysql2": "^1.5.3",
     "papaparse": "^4.4.0",
     "parse-link-header": "^1.0.1",
+    "randomstring": "^1.1.5",
     "rimraf": "^2.6.2",
     "stripe": "^5.8.0",
     "ts-loader": "^4.2.0",
