--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
   "dependencies": {
     "@types/aws-lambda": "8.10.3",
     "@types/chai": "^4.1.3",
+    "@types/crypto-js": "^3.1.40",
     "@types/knex": "^0.14.12",
     "@types/mocha": "^5.2.0",
     "@types/node": "^10.0.3",
     "@types/papaparse": "^4.1.34",
     "@types/parse-link-header": "^1.0.0",
     "@types/stripe": "^5.0.10",
+    "@types/uuid": "^3.4.3",
     "aws-sdk": "^2.232.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.1",
@@ -59,6 +61,7 @@
     "ts-node": "^6.0.2",
     "tslint": "^5.10.0",
     "typescript": "^2.8.3",
+    "uuid": "^3.2.1",
     "webpack": "^4.7.0",
     "webpack-cli": "^2.1.2",
     "zip-webpack-plugin": "^3.0.0"
