--- a/package.json
+++ b/package.json
@@ -62,5 +62,8 @@
     "webpack": "^4.7.0",
     "webpack-cli": "^2.1.2",
     "zip-webpack-plugin": "^3.0.0"
+  },
+  "devDependencies": {
+    "sinon": "^6.0.1"
   }
 }
