--- a/infrastructure/sam.yaml
+++ b/infrastructure/sam.yaml
@@ -335,6 +335,7 @@ Resources:
           DB_USERNAME: "master"
           DB_PASSWORD_PARAMETER: !GetAtt DbCredentials.PasswordParameter
           SECURE_CONFIG_BUCKET: !Ref SecureConfigBucket
+          SECURE_CONFIG_KEY_CODE_CRYTPOGRAPHY: code_cryptography_secrets.json
           SECURE_CONFIG_KEY_JWT: authentication_badge_key.json
           SECURE_CONFIG_KEY_ROLE_DEFINITIONS: RoleDefinitions.json
           SECURE_CONFIG_KEY_SENTRY: sentry_lambda_services.json
@@ -368,6 +369,7 @@ Resources:
                 - !Sub "arn:aws:s3:::${SecureConfigBucket}/authentication_badge_key.json"
                 - !Sub "arn:aws:s3:::${SecureConfigBucket}/RoleDefinitions.json"
                 - !Sub "arn:aws:s3:::${SecureConfigBucket}/sentry_lambda_services.json"
+                - !Sub "arn:aws:s3:::${SecureConfigBucket}/code_cryptography_secrets.json"
             - Effect: Allow
               Action:
                 - kms:Decrypt
