--- a/.env-example
+++ b/.env-example
@@ -7,4 +7,4 @@ STRIPE_PLATFORM_KEY=
 STRIPE_CONNECTED_ACCOUNT_ID=
 
 # This is a customer ID in the connected account with a test source attached (ie card # 4242...)
-STRIPE_CUSTOMER_ID=cus_D7DGMRDFa4BV4U
+STRIPE_CUSTOMER_ID=
