--- a/.env-example
+++ b/.env-example
@@ -8,3 +8,9 @@ STRIPE_CONNECTED_ACCOUNT_ID=
 
 # This is a customer ID in the connected account with a test source attached (ie card # 4242...)
 STRIPE_CUSTOMER_ID=
+
+
+# Leave these as is - they just need to be a string
+SECURE_CONFIG_BUCKET=test
+SECURE_CONFIG_KEY_STRIPE=test
+SECURE_CONFIG_KEY_ASSUME_RETRIEVE_STRIPE_AUTH=test
