--- a/infrastructure/sam.yaml
+++ b/infrastructure/sam.yaml
@@ -303,7 +303,7 @@ Resources:
       Description: !Sub "${AWS::StackName} instance parameter group"
       Family: aurora5.6
       Parameters:
-        sql_mode: STRICT_TRANS_TABLES
+        sql_mode: IGNORE_SPACE,STRICT_TRANS_TABLES
       Tags:
         - Key: Service
           Value: Rothschild
