Add a /v2/healthCheck route and keep it warm with a CW event trigger until we receive steady traffic.

--- a/infrastructure/ci.yaml
+++ b/infrastructure/ci.yaml
@@ -350,16 +350,16 @@ Resources:
               - apigateway:*
             Resource: !Sub "arn:aws:apigateway:${AWS::Region}::/*"
           # CloudWatch event triggers
-#          - Effect: Allow
-#            Action:
-#              - events:DeleteRule
-#              - events:DescribeRule
-#              - events:DisableRule
-#              - events:EnableRule
-#              - events:PutRule
-#              - events:PutTargets
-#              - events:RemoveTargets
-#            Resource: !Sub "arn:aws:events:${AWS::Region}:${AWS::AccountId}:rule/${ProjectName}-*"
+          - Effect: Allow
+            Action:
+              - events:DeleteRule
+              - events:DescribeRule
+              - events:DisableRule
+              - events:EnableRule
+              - events:PutRule
+              - events:PutTargets
+              - events:RemoveTargets
+            Resource: !Sub "arn:aws:events:${AWS::Region}:${AWS::AccountId}:rule/${ProjectName}-*"
           # Kinesis stream event mapping
 #          - Effect: Allow
 #            Action:
