Fix KeepWarmSchedule input event.

--- a/infrastructure/sam.yaml
+++ b/infrastructure/sam.yaml
@@ -400,7 +400,7 @@ Resources:
           Type: Schedule
           Properties:
             Schedule: rate(4 minutes)
-            Input: !Sub "{\"resource\":\"/{proxy+}\",\"path\":\"/v2/healthCheck\",\"httpMethod\":\"GET\",\"headers\":null,\"queryStringParameters\":null,\"pathParameters\":null,\"stageVariables\":null,\"context\":{\"accountId\":\"${AWS::AccountId}\",\"resourceId\":\null,\"stage\":\"Prod\",\"requestId\":null,\"identity\"null,\"body\":null,\"isBase64Encoded\":false}"
+            Input: !Sub "{\"resource\":\"/{proxy+}\",\"path\":\"/v2/healthCheck\",\"httpMethod\":\"GET\",\"headers\":null,\"queryStringParameters\":null,\"pathParameters\":null,\"stageVariables\":null,\"context\":{\"accountId\":\"12345678912\",\"resourceId\":null,\"stage\":\"Prod\",\"requestId\":null,\"identity\":null,\"resourcePath\":\"/{proxy+}\",\"httpMethod\":\"GET\",\"apiId\":null},\"body\":null,\"isBase64Encoded\":false}"
 
   PostDeployFunction:
     Type: AWS::Serverless::Function
