--- a/package.json
+++ b/package.json
@@ -24,23 +24,23 @@
   },
   "homepage": "https://github.com/Giftbit/internal-rothschild#readme",
   "dependencies": {
-    "@types/aws-lambda": "8.10.7",
+    "@types/aws-lambda": "8.10.8",
     "@types/chai": "^4.1.4",
-    "@types/crypto-js": "^3.1.40",
-    "@types/knex": "^0.14.16",
+    "@types/crypto-js": "^3.1.42",
+    "@types/knex": "^0.14.17",
     "@types/loglevel": "^1.5.3",
-    "@types/mocha": "^5.2.4",
+    "@types/mocha": "^5.2.5",
     "@types/node": "^10.5.2",
     "@types/papaparse": "^4.5.1",
     "@types/parse-link-header": "^1.0.0",
     "@types/stripe": "^5.0.18",
     "@types/uuid": "^3.4.3",
-    "aws-sdk": "^2.275.1",
+    "aws-sdk": "^2.279.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "bankers-rounding": "^0.1.3",
-    "cassava": "^2.2.0",
+    "cassava": "^2.2.2",
     "chai": "^4.1.0",
     "chai-exclude": "^1.0.8",
     "crypto": "^1.0.1",
@@ -53,7 +53,7 @@
     "giftbit-ruleslib": "git+ssh://git@github.com/Giftbit/giftbit-ruleslib.git#semver:^4.0.2",
     "import-glob-loader": "^1.1.0",
     "json-loader": "^0.5.7",
-    "knex": "^0.15.1",
+    "knex": "^0.15.2",
     "loglevel": "^1.6.1",
     "loglevel-plugin-prefix": "^0.8.4",
     "lru-cache": "^4.1.3",
@@ -62,17 +62,15 @@
     "papaparse": "^4.5.0",
     "parse-link-header": "^1.0.1",
     "rimraf": "^2.6.2",
+    "sinon": "^6.1.3",
     "stripe": "^5.8.0",
     "ts-loader": "^4.4.2",
     "ts-node": "^7.0.0",
-    "tslint": "^5.10.0",
+    "tslint": "^5.11.0",
     "typescript": "^2.9.2",
     "uuid": "^3.3.2",
-    "webpack": "^4.16.1",
-    "webpack-cli": "^3.0.8",
+    "webpack": "^4.16.2",
+    "webpack-cli": "^3.1.0",
     "zip-webpack-plugin": "^3.0.0"
-  },
-  "devDependencies": {
-    "sinon": "^6.1.3"
   }
 }
