--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "esModuleInterop": true,
     "module": "commonjs",
-    "target": "es6",
     "noImplicitAny": false,
     "noImplicitThis": true,
-    "sourceMap": false
+    "resolveJsonModule": true,
+    "sourceMap": false,
+    "target": "es6"
   }
 }
