--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "module": "commonjs",
     "noImplicitAny": false,
     "noImplicitThis": true,
-    "resolveJsonModule": true,
+    "resolveJsonModule": false, // should be true but this currently breaks ts-loader
     "sourceMap": false,
     "target": "es6"
   }
