--- a/infrastructure/ci.yaml
+++ b/infrastructure/ci.yaml
@@ -344,6 +344,12 @@ Resources:
               - ec2:RevokeSecurityGroupEgress
               - ec2:RevokeSecurityGroupIngress
             Resource: "*"
+          # EC2 bastion host
+          - Effect: Allow
+            Action:
+            - iam:CreateInstanceProfile
+            - iam:DeleteInstanceProfile
+            Resource: !Sub "arn:aws:iam::${AWS::AccountId}:instance-profile/${ProjectName}-*"
           # API Gateway (REST events)
           - Effect: Allow
             Action:
