--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "build": "webpack",
     "clean": "rimraf ./dist",
     "lint": "tslint --project tsconfig.json",
-    "test": "npm run test:startdb; TEST_ENV=true DB_USERNAME=root DB_PASSWORD=testpass DB_PORT=3306 DB_ENDPOINT=localhost DB_READ_ENDPOINT=localhost STRIPE_API_VERSION=2018-05-21 mocha --recursive --require ts-node/register --require ./src/utils/testUtils/setLogLevelSilent.ts --exit \"src/**/*.test.ts\"; npm run test:stopdb",
-    "test:debug": "npm run test:startdb; TEST_ENV=true DB_USERNAME=root DB_PASSWORD=testpass DB_PORT=3306 DB_ENDPOINT=localhost DB_READ_ENDPOINT=localhost STRIPE_API_VERSION=2018-05-21 mocha --recursive --require ts-node/register --require ./src/utils/testUtils/setLogLevelDebug.ts --exit \"src/**/*.test.ts\"; npm run test:stopdb",
-    "test:stripeLive": "npm run test:startdb; TEST_ENV=true DB_USERNAME=root DB_PASSWORD=testpass DB_PORT=3306 DB_ENDPOINT=localhost DB_READ_ENDPOINT=localhost STRIPE_API_VERSION=2018-05-21 TEST_STRIPE_LIVE=true mocha --recursive --require ts-node/register --require ./src/utils/testUtils/setLogLevelSilent.ts --exit \"src/**/*.test.ts\"; npm run test:stopdb",
+    "test": "npm run test:startdb; TEST_ENV=true DB_USERNAME=root DB_PASSWORD=testpass DB_PORT=3306 DB_ENDPOINT=localhost DB_READ_ENDPOINT=localhost mocha --recursive --require ts-node/register --require ./src/utils/testUtils/setLogLevelSilent.ts --exit \"src/**/*.test.ts\"; npm run test:stopdb",
+    "test:debug": "npm run test:startdb; TEST_ENV=true DB_USERNAME=root DB_PASSWORD=testpass DB_PORT=3306 DB_ENDPOINT=localhost DB_READ_ENDPOINT=localhost mocha --recursive --require ts-node/register --require ./src/utils/testUtils/setLogLevelDebug.ts --exit \"src/**/*.test.ts\"; npm run test:stopdb",
+    "test:stripeLive": "npm run test:startdb; TEST_ENV=true DB_USERNAME=root DB_PASSWORD=testpass DB_PORT=3306 DB_ENDPOINT=localhost DB_READ_ENDPOINT=localhost TEST_STRIPE_LIVE=true mocha --recursive --require ts-node/register --require ./src/utils/testUtils/setLogLevelSilent.ts --exit \"src/**/*.test.ts\"; npm run test:stopdb",
     "test:startdb": "docker start rothschild-test-mysql || (docker run --name rothschild-test-mysql -e MYSQL_ROOT_PASSWORD=testpass -p 3306:3306 --health-cmd='mysqladmin ping --silent' -d mysql:5.6 mysqld --innodb-strict-mode=ON --sql_mode=IGNORE_SPACE,STRICT_TRANS_TABLES && until [ `docker inspect --format '{{.State.Health.Status}}' rothschild-test-mysql` = \"healthy\" ]; do echo 'waiting for MySQL to become healthy' && sleep 1; done)",
     "test:stopdb": "docker stop rothschild-test-mysql"
   },
