Set lambda and db connection limits.  Add rds:ResetDBParameterGroup to CI permissions.

--- a/infrastructure/ci.yaml
+++ b/infrastructure/ci.yaml
@@ -295,6 +295,7 @@ Resources:
               - rds:RebootDBInstance
               - rds:RemoveTagsFromResource
               - rds:ResetDBClusterParameterGroup
+              - rds:ResetDBParameterGroup
               - rds:StartDBInstance
               - rds:StopDBInstance
             Resource:
