--- a/package.json
+++ b/package.json
@@ -26,33 +26,35 @@
   },
   "homepage": "https://github.com/Giftbit/internal-rothschild#readme",
   "dependencies": {
-    "@types/aws-lambda": "8.10.13",
-    "@types/chai": "^4.1.5",
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "@types/aws-lambda": "8.10.14",
+    "@types/chai": "^4.1.7",
     "@types/crypto-js": "^3.1.43",
-    "@types/knex": "^0.14.24",
+    "@types/knex": "^0.14.26",
     "@types/loglevel": "^1.5.3",
     "@types/mocha": "^5.2.5",
-    "@types/node": "^10.10.1",
+    "@types/node": "^10.12.1",
     "@types/papaparse": "^4.5.4",
     "@types/parse-link-header": "^1.0.0",
-    "@types/sinon": "^5.0.2",
-    "@types/stripe": "^5.0.18",
+    "@types/raven": "^2.5.1",
+    "@types/sinon": "^5.0.5",
+    "@types/stripe": "^6.0.3",
+    "@types/superagent": "^3.8.4",
     "@types/uuid": "^3.4.4",
-    "aws-sdk": "^2.318.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
+    "aws-sdk": "^2.344.0",
+    "babel-loader": "^8.0.4",
     "bankers-rounding": "^0.1.3",
-    "cassava": "^2.2.2",
-    "chai": "^4.1.0",
-    "chai-exclude": "^1.0.9",
+    "cassava": "^2.3.0",
+    "chai": "^4.2.0",
+    "chai-exclude": "^1.0.10",
     "crypto": "^1.0.1",
     "crypto-js": "^3.1.9-1",
-    "dotenv": "^6.0.0",
+    "dotenv": "^6.1.0",
     "dynameh": "^2.10.3",
     "file-loader": "^2.0.0",
-    "giftbit-cassava-routes": "git+ssh://git@github.com/Giftbit/giftbit-cassava-routes.git#semver:^9.0.0",
-    "giftbit-lambda-metricslib": "git+ssh://git@github.com/Giftbit/giftbit-lambda-metricslib.git#semver:^2.0.1",
+    "giftbit-cassava-routes": "git+ssh://git@github.com/Giftbit/giftbit-cassava-routes.git#semver:^9.0.1",
+    "giftbit-lambda-metricslib": "git+ssh://git@github.com/Giftbit/giftbit-lambda-metricslib.git#semver:^3.0.0",
     "giftbit-ruleslib": "git+ssh://git@github.com/Giftbit/giftbit-ruleslib.git#semver:^4.0.2",
     "import-glob-loader": "^1.1.0",
     "json-loader": "^0.5.7",
@@ -61,19 +63,19 @@
     "loglevel-plugin-prefix": "^0.8.4",
     "lru-cache": "^4.1.3",
     "mocha": "^5.2.0",
-    "mysql2": "^1.5.3",
-    "papaparse": "^4.5.0",
+    "mysql2": "^1.6.1",
+    "papaparse": "^4.6.1",
     "parse-link-header": "^1.0.1",
     "rimraf": "^2.6.2",
-    "sinon": "^6.3.4",
+    "sinon": "^7.1.0",
     "stripe": "^6.12.1",
-    "ts-loader": "^5.1.1",
+    "ts-loader": "^5.2.2",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
-    "typescript": "^3.0.3",
+    "typescript": "^3.1.3",
     "uuid": "^3.3.2",
-    "webpack": "^4.19.1",
-    "webpack-cli": "^3.1.0",
+    "webpack": "^4.23.1",
+    "webpack-cli": "^3.1.2",
     "zip-webpack-plugin": "^3.0.0"
   }
 }
