--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "dotenv": "^6.1.0",
     "dynameh": "^2.10.3",
     "file-loader": "^2.0.0",
-    "giftbit-cassava-routes": "git+ssh://git@github.com/Giftbit/giftbit-cassava-routes.git#semver:^10.0.2",
+    "giftbit-cassava-routes": "git+ssh://git@github.com/Giftbit/giftbit-cassava-routes.git#metrics",
     "giftbit-lambda-metricslib": "git+ssh://git@github.com/Giftbit/giftbit-lambda-metricslib.git#semver:^3.0.0",
     "giftbit-ruleslib": "git+ssh://git@github.com/Giftbit/giftbit-ruleslib.git#semver:^4.1.1",
     "import-glob-loader": "^1.1.0",
