--- a/package.json
+++ b/package.json
@@ -78,5 +78,8 @@
     "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2",
     "zip-webpack-plugin": "^3.0.0"
+  },
+  "devDependencies": {
+    "chai-match": "^1.1.1"
   }
 }
